fix: des-2730 app-card spacing

--- a/designsafe/static/styles/app-card.css
+++ b/designsafe/static/styles/app-card.css
@@ -14,7 +14,7 @@
 
 /* Title */
 .c-app-card__title {
-    margin-top: 0.5em;
+    margin-top: 1em;
     margin-bottom: 0;
 }
 .c-app-card__title > .icon::before {
@@ -23,7 +23,7 @@
 
 /* Description */
 .c-app-card__desc {
-    padding-inline: 1rem;
+    padding-inline: 1.5rem;
     margin-block: 1.5rem;
 }
 
